cmake_minimum_required(VERSION 3.12)

project(DynamicProgramming 
            VERSION 1.0.0
            DESCRIPTION "Dynamic Programming")

            
set(CMAKE_POSITION_INDEPENDENT_CODE ON)            


add_subdirectory(Fibonacci)
# add_subdirectory(Knapsack)
# add_subdirectory(UnBoundedKnapsack)
# add_subdirectory(Palindrome)
# add_subdirectory(LongestCommonSubstring)