cmake_minimum_required(VERSION 3.12)

project(Problems 
            VERSION 1.0.0
            DESCRIPTION "C++ Sample Problems & solutions ")

            
set(CMAKE_POSITION_INDEPENDENT_CODE ON)            


add_subdirectory(HR)
add_subdirectory(OneOff)
add_subdirectory(EducativeIO)
# add_subdirectory(Map)
