cmake_minimum_required(VERSION 3.12)

project(STLContainers 
            VERSION 1.0.0
            DESCRIPTION "STL Containers")

            
set(CMAKE_POSITION_INDEPENDENT_CODE ON)            

# add_subdirectory(Array)
add_subdirectory(Vector)
# add_subdirectory(List)
# add_subdirectory(Set)
# add_subdirectory(Map)
