cmake_minimum_required(VERSION 3.12)
project(List
        VERSION 1.0.0
        DESCRIPTION "List")


# add_executable(list_insert)
# target_sources(list_insert PRIVATE list_insert.cpp)
# target_compile_features(list_insert PRIVATE cxx_std_14) 

add_executable(list_1)
target_sources(list_1 PRIVATE list_1.cpp)
target_compile_features(list_1 PRIVATE cxx_std_14) 

# add_executable(list_2)
# target_sources(list_2 PRIVATE list_2.cpp)
# target_compile_features(list_2 PRIVATE cxx_std_14) 


# add_executable(list_3)
# target_sources(list_3 PRIVATE list_3.cpp)
# target_compile_features(list_3 PRIVATE cxx_std_14) 
